# O-CNN

./: .gitignore  README.md
caffe/: CMakeLists.txt
caffe/experiments/: ae_7_4.solver.prototxt  ae_7_4.test.prototxt  ae_7_4.train.prototxt  aocnn_ae_7_4.solver.prototxt  aocnn_ae_7_4.test.prototxt  aocnn_ae_7_4.train.prototxt  aocnn_m40_5.prototxt  aocnn_m40_5_solver.prototxt  aocnn_m40_6.prototxt  aocnn_m40_6_solver.prototxt  dataset.py  ocnn_m40_5.prototxt  ocnn_m40_6.prototxt  ocnn_m40_6_solver.prototxt  prepare_dataset.py
caffe/tools/: caffe.cpp  convert_octree_data.cpp  feature_pooling.cpp  resize_image_lmdb.cpp  revert_octree_database.cpp  upgrade_octree_database.cpp
docker/: Dockerfile
docs/: Classification.md  Data_Preparation.md  Installation.md  autoencoder.md  citation.md  classification.md  completion.md  data_preparation.md  image2shape.md  installation.md  retrieval.md  scannet.md  segmentation.md  unsupervised.md
examples/: create_dataset.py  generate_dataset.py  octree_config.yml  plot_points.py
ocnn/caffe/: CMakeLists.txt  setup.py
ocnn/caffe/cpp/: CMakeLists.txt
ocnn/caffe/cpp/include/ocnn/caffe/: lmdb_builder.h
ocnn/caffe/cpp/src/: lmdb_builder.cpp
ocnn/octree/: CMakeLists.txt  OctreeConfig.h.in  cmake.cmd  setup.py
ocnn/octree/include/octree/: cmd_flags.h  octree.h  octree_info.h  octree_parser.h  points.h  util.h
ocnn/octree/python/ocnn/dataset/: CMakeLists.txt  __init__.py  _writable_data.pxd  _writable_data.pyx  augmentor.py  data_processor.py  dataset.py  dataset_structure.py  file_utils.py  ordered_producer_consumer.py
ocnn/octree/python/ocnn/octree/: CMakeLists.txt  __init__.py  _octree.pyx  _octree_extern.pxd  octree_augmentor.py  octree_processor.py  octree_settings.py  octree_yaml_reader.py
ocnn/octree/python/ocnn/utils/: __init__.py  off_utils.py
ocnn/octree/src/octree/: marching_cube.cpp  marching_cube_table.cpp  octree.cpp  octree_info.cpp  octree_parser.cpp  points.cpp  util.cpp
ocnn/octree/src/test/: test_octree.cpp
ocnn/octree/tools/: adaptive_octree.cpp  build_octree.cpp  check_octree.cpp  octree2mesh.cpp  octree2points.cpp  ply2points.cpp  points2ply.cpp  upgrade_octree.cpp  upgrade_points.cpp
octree/: CMakeLists.txt  Octree.sln
octree/Octree/: Octree.cpp  Octree.h  Octree.vcxproj  Octree.vcxproj.filters  main.cpp
octree/Octree2PLY/: Octree2PLY.vcxproj  Octree2PLY.vcxproj.filters  Octree2Ply.cpp
octree/include/octree/: marching_cube.h  octree.h  octree_parser.h  points.h  util.h
octree/octree/: cmd_flags.h  contour.cpp  contour.h  device_alternate.h  filenames.cpp  filenames.h  gemm_engine.h  logs.h  marching_cube.cpp  marching_cube.h  marching_cube_table.cpp  math_functions.cpp  math_functions.h  merge_octrees.cpp  merge_octrees.h  mesh.cpp  mesh.h  octree.cpp  octree.h  octree_conv.cpp  octree_conv.h  octree_info.cpp  octree_info.h  octree_nn.cpp  octree_nn.cu  octree_nn.h  octree_parser.cpp  octree_parser.cu  octree_parser.h  octree_samples.cpp  octree_samples.h  octree_util.cpp  octree_util.cu  octree_util.h  octree_value.cpp  octree_value.h  points.cpp  points.h  points_info.cpp  points_info.h  (+9 more)
octree/python/: CMakeLists.txt  pyoctree.cpp
octree/src/octree/: octree.cpp  octree_info.cpp  octree_parser.cpp  points.cpp  util.cpp
octree/test/: test_octree.cpp  test_octree_nn.cpp  test_util.cpp
octree/tools/: adaptive_octree.cpp  bbox.cpp  build_octree.cpp  chamfer_distance.cpp  check_octree.cpp  clip_points.cpp  custom_data.cpp  merge_octree.cpp  mesh2points.cpp  octree2mesh.cpp  octree2points.cpp  octree2pts_suncg.cpp  octree_bbox.cpp  octree_dropout.cpp  octree_prune.cpp  octree_samples.cpp  octree_zbuffer.cpp  play_ground.cpp  ply2points.cpp  points2ply.cpp  points_noise.cpp  simplify_points.cpp  transform_points.cpp  upgrade_octree.cpp  upgrade_points.cpp
python/: dataset.py  file_utils.py  modelnet.py  off_tools.py  prepare_dataset.py
pytorch/: requirements.txt  setup.py
pytorch/cpp/: ocnn.h  octree2col.cpp  octree_align.cpp  octree_batch.cpp  octree_conv.cpp  octree_grow.cpp  octree_key.cpp  octree_pad.cpp  octree_pool.cpp  octree_property.cpp  octree_samples.cpp  point2octree.cpp  points_property.cpp  pybind.cpp  transform_octree.cpp  transform_points.cpp
pytorch/ocnn/: __init__.py  lenet.py  mlp.py  modules.py  octree2col.py  octree2voxel.py  octree_align.py  octree_conv.py  octree_deconv.py  octree_pad.py  octree_pool.py  ounet.py  resnet.py  segnet.py  transforms.py  unet.py
pytorch/projects/: classification.py  completion.py  config.py  dataset  dataset.py  modelnet.py  segmentation.py  shapenet_seg.py
pytorch/test/: test_all.py  test_octree2col.py  test_octree_align.py  test_octree_conv.py  test_octree_deconv.py  test_octree_grow.py  test_octree_key.py  test_octree_pool.py  test_octree_property.py  test_octree_trilinear.py  test_points_property.py
pytorch/util/: octree_samples.py
tensorflow/: data_report.txt  libs_report.txt  script_report.txt  test_report.txt  util_report.txt
tensorflow/data/: cls_modelnet.py  completion.py  midnet_data.py  plant3d_data.py  reduce_pheno4d.py  reduce_points.py  seg_partnet.py  seg_pheno4d.py  seg_pheno4d_simplified.py  seg_shapenet.py
tensorflow/libs/: __init__.py  build.py  octree2col_op.cc  octree_align_op.cc  octree_batch_op.cc  octree_bilinear_op.cc  octree_conv_op.cc  octree_database_op.cc  octree_gather_op.cc  octree_grow_op.cc  octree_key_op.cc  octree_mask_op.cc  octree_max_pool_op.cc  octree_new_op.cc  octree_pad_op.cc  octree_property_op.cc  octree_samples.cc  octree_search_op.cc  octree_set_property_op.cc  octree_update_op.cc  points2octree_op.cc  points_database_op.cc  points_property_op.cc  points_set_property_op.cc  tensorflow_gpu_gemm.cu.cc  tensorflow_gpu_gemm.h  transform_octree_op.cc  transform_points_op.cc
tensorflow/script/: ae.py  cls.py  config.py  dataset.py  feature.py  learning_rate.py  mid_loss.py  network_ae.py  network_aenet.py  network_cls.py  network_completion.py  network_factory.py  network_hrnet.py  network_hrnet4t6.py  network_segnet.py  network_unet.py  ocnn.py  prepare_dataset.py  run_ae.py  (+17 more)
(+202 files in other folders)
